install/kubernetes/consul/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: consul
spec:
  rules:
    - host: consul.kpaas.nsini.com
      http:
        paths:
          - backend:
              serviceName: consul
              servicePort: 8500
